  wxDirPickerCtrl, wxFilePickerCtrl, wxFontPickerCtrl, wxCollapsiblePane,
  wxSearchCtrl, wxAboutBox, wxTreebook, tar streams.


2.8.1
-----

All:

- Fix compilation with wxUSE_STL=1
- wxGrid::GetBestSize() returns same size the grid would have after AutoSize()
- Added wxTreeCtrl::CollapseAll[Children]() and IsEmpty() (Francesco Montorsi)
- Several RTL-related positioning fixes (Diaa Sami)

wxMSW:

- Fixed compilation with Borland C++ in Unicode mode but without MSLU

wxGTK:

- Don't crash if command line is not valid UTF-8 (Unicode build only)

wxUniv:

- It is now possible to set background colour of wxStaticText


2.8.0
-----

All:

- Added wxSearchCtrl (Vince Harron)
- wxCSConv("UTF-16/32") now behaves correctly, i.e. same as wxMBConvUTF16/32
- wxArrayString::Alloc() now works as reserve() and doesn't clear array contents
- Fixed long standing bug in wxFileConfig groups renaming (Antti Koivisto).
- New option wxFS_READ | wxFS_SEEKABLE for wxFileSystem::OpenFile() to return
  a stream that is seekable.
- Fixed bug in wxCalendarCtrl::HitTest() when clicking on month change arrows
- Added wxWindow::GetWindowBorderSize() and corrected wxTreeCtrl::GetBestSize()
  for a control with borders (Tim Kosse)

wxMSW:

- Fixed version script problems when using configure with cygwin/mingw32.
- Use system default paper size for printing instead of A4.
- Fix (harmless) assert in virtual list control under Vista
- Fix colours when converting wxBitmap with alpha to wxImage (nusi).

wxGTK:

- Allow dynamically changing most of text control styles
- Enable use of libgnomeprintui by default in configure


2.7.2
-----

All:

- Added wxFFile overload to wxFileName::CreateTemporaryFileName().
- Added GetTempDir() to wxFileName and wxStandardPaths.
- Added wxTar streams.
- Added wxFilterFSHandler and wxArchiveFSHandler.
- Added wxString::ToLongLong() and ToULongLong().

All (GUI):

- wxMemoryDC constructor now optionally accepts a wxBitmap parameter,